feat(auth, swagger, documentation): Complete JWT Authentication Implementation, Swagger Documentation, and Project Fixes
## ✅ What's Changed

### Backend Changes
- Complete JWT authentication implementation
- Updated ErrorCode enum with validation-related error codes
- Enhanced RegisterRequest validation logic with password complexity rules
- Refactored JwtService to use AppException for JWT exception handling
- Updated JwtAuthenticationFilter with proper exception handling
- Added SecurityConfig with Spring Security configuration
- Added CustomUserDetailService and CurrentUserService
- Added User entity and UserRepository
- Added AuthenticationService with register/login logic
- Added application-test.properties for test environment
- Comprehensive test coverage:
  - AuthenticationControllerTest (with validation tests)
  - GlobalExceptionHandlerTest
  - JwtAuthenticationFilterTest
  - JwtServiceTest
  - AuthenticationServiceTest
  - UserRepositoryIntegrationTest
  - TransactionRepositoryIntegrationTest
  - AuthenticationIntegrationTest
- Complete Swagger/OpenAPI documentation:
  - AuthenticationController with @Operation, @ApiResponse, @Tag
  - All request/response DTOs with @Schema annotations
  - RegisterRequest, LoginRequest, AuthResponse, PaginatedResponse
  - ApiErrorResponse (already had Swagger annotations)

### Frontend Changes
- Complete authentication module implementation
- Updated pubspec.yaml with all dependencies:
  - dio: ^5.7.0
  - flutter_secure_storage: ^11.0.0
  - provider: ^6.1.2
  - mockito: ^5.4.5
  - build_runner: ^2.4.13
- Created complete authentication stack:
  - AuthApi (authentication API calls)
  - AuthRepository (authentication business logic)
  - LoginPage, RegisterPage (UI screens)
  - AuthService (state management with Provider)
  - DioClient with automatic token injection via interceptor
- Updated DashboardView with logout functionality
- Updated main.dart with complete authentication flow integration
- Refactored ApiService from h